# aoc2022

./: CMakeLists.txt  README.md  main.cpp
solutions/: Knot.cpp  Knot.h  Rope.cpp  Rope.h  Storage.cpp  Storage.h  day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day8.cpp  day8.h  day9.cpp  day9.h
