cmake_minimum_required(VERSION 3.24)
project(aoc2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(aoc2022 main.cpp solutions/day1.cpp solutions/day1.h solutions/day2.cpp solutions/day2.h solutions/day3.cpp solutions/day3.h solutions/day4.cpp solutions/day4.h solutions/day5.cpp solutions/day5.h solutions/Storage.cpp solutions/Storage.h solutions/day6.cpp solutions/day6.h solutions/day8.cpp solutions/day8.h solutions/day9.cpp solutions/day9.h solutions/Rope.cpp solutions/Rope.h solutions/Knot.cpp solutions/Knot.h)
